--- a/Frontend/templates/shipment.html
+++ b/Frontend/templates/shipment.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Shipment</title>
-    <link rel="stylesheet" href="shipment.css">
+    <link rel="stylesheet" href="../static/css/shipment.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
 
