--- a/Frontend/templates/dashboard.html
+++ b/Frontend/templates/dashboard.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<body>
+<body onload="">
 <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
     <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" th:inline="text">
         Welcome, <span th:remove="tag" sec:authentication="name"></span>!
