--- a/Frontend/templates/dashboard.html
+++ b/Frontend/templates/dashboard.html
@@ -7,9 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
 
-<body onload="">
+<body onload="validatetoken()">
 <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
     <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" th:inline="text">
         Welcome, <span th:remove="tag" sec:authentication="name"></span>!
@@ -97,6 +98,6 @@
         </main>
     </div>
 </div>
-
+<script src="../static/js/dashboard.js"></script>
 </body>
 </html>
