--- a/Frontend/templates/shipment.html
+++ b/Frontend/templates/shipment.html
@@ -2,68 +2,176 @@
 <head>
     <title>Shipment</title>
     <link rel="stylesheet" href="../static/css/shipment.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <link href="../static/css/sample.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
 
 <body>
-
-    <div class="dashboard-form input-form" >
-        <h2>Create New Shipment</h2>
-
-        <div class="form-input">
-            <label for="invoice-no">Shipment/Invoice No :</label>
-            <input type="text" id="invoice_no">
-        </div>
-        <div class="form-input">
-            <label for="container-no">Container No :</label>
-            <input type="text" id="container_no">
-        </div>
-        <div class="form-input">
-            <label for="shipment-description">Shipment Description :</label>
-            <input type="text" id="shipment_description">
-        </div>
-        <div class="form-input">
-            <label for="route-details">Route Details :</label>
-            <input type="text" id="route_details">
-        </div>
-        <div class="form-input">
-            <label for="goods-type">Goods Type :</label>
-            <input type="text" id="goods_type">
-        </div>
-        <div class="form-input">
-            <label for="device">Device :</label>
-            <input type="text" id="device">
-        </div>
-        <div class="form-input">
-            <label for="expected-delivery-date">Expected Delivery Date :</label>
-            <input type="date" id="expected_delivery_date">
-        </div>
-
-        <div class="form-input">
-            <label for="po-no">PO Number :</label>
-            <input type="text" id="po_no">
-        </div>
-        <div class="form-input">
-            <label for="delivery-no">Delivery Number :</label>
-            <input type="text" id="delivery_no">
-        </div>
-        <div class="form-input">
-            <label for="ndc-no">NDC Number :</label>
-            <input type="text" id="ndc_no">
-        </div>
-        <div class="form-input">
-            <label for="batch-id">Batch Id :</label>
-            <input type="number" id="batch_id">
-        </div>
-        <div class="form-input">
-            <label for="serial-no">Serial number of Goods :</label>
-            <input type="number" id="serial_no">
-        </div>
-        <div class="form-input">
-            <button id="sub-btn" onclick="createShipment()">Submit Details</button>
-        </div>
-    </div>
+    <div class="page-wrapper chiller-theme toggled">
+        <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
+          <i class="fas fa-bars"></i>
+        </a>
+        <nav id="sidebar" class="sidebar-wrapper">
+          <div class="sidebar-content">
+            <div class="sidebar-brand">
+              <a href="#">SCMXpert Lite</a>
+              
+            </div>
+            
+      
+            <div class="sidebar-menu">
+              <ul>
+                <li class="header-menu">
+                  <span>General</span>
+                </li>
+                <li class="sidebar-dropdown ">
+                  <a href="./dashboard.html">
+                    <i class="fa fa-tachometer-alt"></i>
+                    <span>Dashboard</span>
+                   
+                  </a>
+               
+                </li>
+                <li class="sidebar-dropdown active">
+                  <a href="./shipment.html">
+                    <i class="fa fa-shopping-cart"></i>
+                    <span>Shipments</span>
+                   
+                  </a>
+                
+                </li>
+                </li>
+      
+                <li class="sidebar-dropdown">
+                  <a href="#">
+                    <i class="fa fa-tachometer-alt"></i>
+                    <span>Device Data Stream</span>
+                   
+                  </a>
+               
+                </li>
+              </ul>
+            </div>
+            <!-- sidebar-menu  -->
+          </div>
+          <!-- sidebar-content  -->
+          <div class="sidebar-footer">
+            
+            <a href="#">
+              <i class="fa fa-power-off"></i>
+            </a>
+          </div>
+        </nav>
+        <!-- sidebar-wrapper  -->
+        <main class="page-content">
+          <div class="container-fluid">
+            <h2>Create New Shipment</h2>
+            <hr>
+            <div class="row">
+           
+          <div class="dashboard-form input-form" >
+            
+      
+              <div class="form-input">
+                  <label for="invoice-no">Shipment/Invoice No :</label>
+                  <input type="text" id="invoice_no">
+              </div>
+              <div class="form-input">
+                  <label for="container-no">Container No :</label>
+                  <input type="text" id="container_no">
+              </div>
+              <div class="form-input">
+                  <label for="shipment-description">Shipment Description :</label>
+                  <input type="text" id="shipment_description">
+              </div>
+              <div class="form-input">
+                  <label for="route-details">Route Details :</label>                  
+                  <select name="route_details" id="route_details">
+                    <option value="defaultValue" id="defaultValue">Select Route</option>
+                    
+                    <option value="USA - New York City, New York">USA - New York City, New York</option>
+                    
+                    <option value="USA - Los Angeles, California">USA - Los Angeles, California</option>
+                    
+                    <option value="USA - Chicago, Illinois">USA - Chicago, Illinois</option>
+                    
+                    <option value="USA - Houston, Texas">USA - Houston, Texas</option>
+                    
+                    <option value="USA - Phoenix, Arizona">USA - Phoenix, Arizona</option>
+                    
+                    <option value="USA - Philadelphia, Pennsylvania">USA - Philadelphia, Pennsylvania</option>                    
+                 </select>                 
+              </div>
+              
+              <div class="form-input">
+                <label for="goodsType">Goods Type :</label>
+                <select name="goods_type" id="goods_type">
+                    <option value="defaultValue">Select Goods</option>
+                    
+                    <option value="E-Commerce">E-Commerce</option>
+                    
+                    <option value="Pharmaceutical">Pharmaceutical</option>
+                    
+                    <option value="Textiles">Textiles</option>
+                    
+                    <option value="Edibles">Edibles</option>
+                    
+                    <option value="Electronics">Electronics</option>
+                    
+                </select>
+              </div>
+              <div class="form-input">
+                  <label for="device">Device :</label>
+                  <input type="text" id="device">
+              </div>
+              <div class="form-input">
+                  <label for="expected-delivery-date">Expected Delivery Date :</label>
+                  <input type="date" id="expected_delivery_date">
+              </div>
+      
+              <div class="form-input">
+                  <label for="po-no">PO Number :</label>
+                  <input type="text" id="po_no">
+              </div>
+              <div class="form-input">
+                  <label for="delivery-no">Delivery Number :</label>
+                  <input type="text" id="delivery_no">
+              </div>
+              <div class="form-input">
+                  <label for="ndc-no">NDC Number :</label>
+                  <input type="text" id="ndc_no">
+              </div>
+              <div class="form-input">
+                  <label for="batch-id">Batch Id :</label>
+                  <input type="number" id="batch_id">
+              </div>
+              <div class="form-input">
+                  <label for="serial-no">Serial number of Goods :</label>
+                  <input type="number" id="serial_no">
+              </div>
+              <div class="form-input">
+                  <button id="sub-btn" onclick="createShipment()">Submit Details</button>
+              </div>
+          </div>
+          </div>
+        </main>
+      
+      </div>
+      
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" ></script>
+          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>   
     <script src="../static/js/createShipment.js"></script>
 </body>
 
 </html>
+
+
+
+
