--- a/Frontend/templates/shipment.html
+++ b/Frontend/templates/shipment.html
@@ -95,17 +95,17 @@
                   <select name="route_details" id="route_details">
                     <option value="defaultValue" id="defaultValue">Select Route</option>
                     
-                    <option value="USA - New York City, New York">USA - New York City, New York</option>
+                    <option value="IND - Chennai">IND - Chennai</option>
                     
-                    <option value="USA - Los Angeles, California">USA - Los Angeles, California</option>
+                    <option value="IND - Bangalore">IND - Bangalore</option>
                     
-                    <option value="USA - Chicago, Illinois">USA - Chicago, Illinois</option>
+                    <option value="IND - Delhi">IND - Delhi</option>
                     
-                    <option value="USA - Houston, Texas">USA - Houston, Texas</option>
+                    <option value="IND - Calcutta">IND - Calcutta</option>
                     
-                    <option value="USA - Phoenix, Arizona">USA - Phoenix, Arizona</option>
+                    <option value="IND - Mumbai">IND - Mumbai</option>
                     
-                    <option value="USA - Philadelphia, Pennsylvania">USA - Philadelphia, Pennsylvania</option>                    
+                    <option value="IND - Tirupathi">IND - Tirupathi</option>                    
                  </select>                 
               </div>
               
@@ -120,7 +120,7 @@
                     
                     <option value="Textiles">Textiles</option>
                     
-                    <option value="Edibles">Edibles</option>
+                    <option value="Food and Beverages">Food and Beverages</option>
                     
                     <option value="Electronics">Electronics</option>
                     
