--- a/Frontend/templates/Login.html
+++ b/Frontend/templates/Login.html
@@ -22,7 +22,7 @@
                         <p class="mb-1">Welcome to our</p>
                         <h4 class="mb-5 text-white">shipments Community</h4>
                     </div>
-                    <a href="./Signup.html" button class="btn btn-primary btn-lg" ><small>Don't have an account?</small> <span>&nbsp;Sign up</span>
+                    <a href="./signup.html" button class="btn btn-primary btn-lg" ><small>Don't have an account?</small> <span>&nbsp;Sign up</span>
                   </a>
             </div>
             <div class="card two bg-white px-5 py-4 mb-3">
@@ -36,12 +36,6 @@
                 </div>
                 <div class="mb-3">
                     <div class="row bg">
-                      <!-- <div class="col-sm-10">
-                        <p name="maincaptcha" readonly class="form-control" id="">
-                      </div> -->
-                      <!-- <div class="col-sm-2">
-                        <button class="btn btn-success btn-sm" onclick="generateCaptcha(event);" id="refresh"><i class="fa fa-refresh" style="font-size:17px"></i></button>
-                      </div> -->
                       <input type="text" id="mainCaptcha" class="col-sm-8 ml-3 bg-light" readonly="readonly">
                       </input>
                       <div class="col-sm-2" onclick="generate()">
