--- a/Frontend/templates/Signup.html
+++ b/Frontend/templates/Signup.html
@@ -24,7 +24,7 @@
                         <p class="mb-1">Start managing your</p>
                         <h4 class="mb-5 text-white">shipments with us!</h4>
                     </div>
-                    <a button class="btn btn-primary btn-lg"  href="./Login.html"><small>Already signed up?</small><span>&nbsp;Log in</span>
+                    <a button class="btn btn-primary btn-lg"  href="./login.html"><small>Already signed up?</small><span>&nbsp;Log in</span>
                     </a>
             </div>
             <div class="card two bg-white px-5 py-4 mb-3">
