--- a/Frontend/templates/Login.html
+++ b/Frontend/templates/Login.html
@@ -29,7 +29,8 @@
 
                 <div class="form-group">
                     <input type="text" class="form-control" id="mail" required>
-                    <label class="form-control-placeholder" for="mail">Email</label></div>
+                    <label class="form-control-placeholder" for="mail">Email</label>
+                </div>
                 <div class="form-group">
                     <input type="password" class="form-control" id="password" required>
                     <label class="form-control-placeholder" for="password">Password</label>
@@ -56,8 +57,8 @@
                     </div>
                   </div>
                   <div class="mb-3">
-                    <span id="error" style="color:red;"></span>
-                    <span id="success" style="color:#004F76;"></span>
+                    <h6 id="error" style="color:red;"></h6>
+                    <h6 id="success" style="color:#004F76;"></h6>
                   </div>
                 <button class="btn btn-primary btn-block btn-lg mt-1 mb-2"  onclick="CheckValidCaptcha();"><span>Login <i class="fas fa-long-arrow-alt-right ml-2"></i></span></button>
             </div>
