--- a/Frontend/static/css/dashboard.css
+++ b/Frontend/static/css/dashboard.css
@@ -40,6 +40,7 @@
 }
 body {
   font-size: 0.9rem;
+  background: #D8E2F0;
 }
 .page-wrapper .sidebar-wrapper,
 .sidebar-wrapper .sidebar-brand > a,
@@ -355,6 +356,7 @@ body {
   width: 100%;
   padding-left: 0px;
   padding-top: 20px;
+  background: #D8E2F0;
 }
 
 .page-wrapper .page-content > div {
