--- a/Frontend/templates/dashboard.html
+++ b/Frontend/templates/dashboard.html
@@ -79,7 +79,7 @@
   <!-- sidebar-wrapper  -->
   <main class="page-content">
     <div class="container-fluid">
-      <h2>Welcome<h2 id="email_token"></h2></h2>
+      <h2>Welcome<span style="margin-left:10px;"  id="email_token"></span></h2>
       <hr>
       <div class="row">
      
