--- a/Frontend/templates/Signup.html
+++ b/Frontend/templates/Signup.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -33,6 +34,10 @@
                 <div class="form-group"><input type="text" class="form-control" id="typeEmail" required><label class="form-control-placeholder" for="email">Email</label></div>
                 <div class="form-group"><input type="password" class="form-control" id="typePassword" required><label class="form-control-placeholder" for="password">Password</label></div>
                 <button class=" btn-primary btn-block btn-lg mt-1 mb-2" onclick="signUpData()"><span>Get started<i class="fas fa-long-arrow-alt-right ml-2"></i></span></button>
+                <div class="mb-3">
+                    <h6 id="error" style="color:red;"></h6>
+                    <h6 id="success" style="color:#004F76;"></h6>
+                  </div>
             </div>
         </div>
     </div>
