kafka pages implemented

--- a/Frontend/templates/dashboard.html
+++ b/Frontend/templates/dashboard.html
@@ -88,13 +88,13 @@
     <div class="dashboardSections">
         <div class="createShipmentDashboardSection">
             <p class="sectionTitle">Create New Shipment</p>
-            <button id="shipmentButton" onclick="window.location.href = '/createshipment';">Create
+            <button id="shipmentButton" onclick="window.location.href = './shipment.html';">Create
                 Shipment</button>
         </div>
 
         <div class="deviceDatStreamDashboardSection">
             <p class="sectionTitle">View Device Data Stream</p>
-            <button id="deviceStreamButton" onclick="window.location.href = '';">Device Data
+            <button id="deviceStreamButton" onclick="window.location.href = './deviceData.html';">Device Data
                 Stream</button>
         </div>
     </div>
