--- a/Frontend/templates/deviceData.html
+++ b/Frontend/templates/deviceData.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>deviceData</title>
-    <link rel="stylesheet" href="./template/static/css/deviceData.css">
+    <link rel="stylesheet" href="../static/css/deviceData.css">
     <style>
       table,
       th,
@@ -31,40 +31,6 @@
     </tbody>
   </table>
 </div>
-<script>
-  function getDeviceData(x) {
-    x.style.display = 'none';
-    var token = localStorage.getItem("access_token");
-                if(token == undefined){                  
-                    window.location.href = "http://"+window.location.hostname+":5501"
-                }else{   
-  fetch("http://"+window.location.hostname+":8000/devicestream", {
-    method:'GET',
-    headers: {
-    Accept: 'application/json',
-    Authorization: 'Bearer ' + localStorage.getItem('access_token')}}).then(
-  res => {
-    res.json().then(
-      data => {
-        console.log(data);
-        if (data.length > 0) {
-          var temp = "";
-          data.forEach((itemData) => {
-            temp += "<tr>";
-            temp += "<td>" + itemData.Battery_Level + "</td>";
-            temp += "<td>" + itemData.Device_Id + "</td>";
-            temp += "<td>" + itemData.First_Sensor_temperature + "</td>";
-            temp += "<td>" + itemData.Route_From + "</td>";
-            temp += "<td>" + itemData.Route_To + "</td></tr>";
-          });
-          document.getElementById('data').innerHTML = temp;
-        }
-      }
-    )
-  }
-)
-}
-  }
-</script>
+<script src="../static/js/deviceData.js"></script>
 </body>
 </html>
