device data html

--- a/Frontend/templates/deviceData.html
+++ b/Frontend/templates/deviceData.html
@@ -1,36 +1,120 @@
+
+<!------ Include the above in your HEAD tag ---------->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>deviceData</title>
-    <link rel="stylesheet" href="../static/css/deviceData.css">
-    <style>
-      table,
-      th,
-      td {
-        border: 1px solid black;
-      }
-    </style>
-  </head>
-  <body>
-    <h2>Data from Kafka</h2>
-    <div class="button">
-    <button onclick="getDeviceData(this)">Click here to view data</button>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Responsive sidebar template with sliding effect and dropdown menu based on bootstrap 3">
+    <title>DashBoard</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <link href="../static/css/dashboard.css" rel="stylesheet">
+    <link href="../static/css/deviceData.css" rel="stylesheet">
+ 
+
+</head>
+
+<body onload="validatetoken()">
+<div class="page-wrapper chiller-theme toggled">
+  <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
+    <i class="fas fa-bars"></i>
+  </a>
+  <nav id="sidebar" class="sidebar-wrapper">
+    <div class="sidebar-content">
+      <div class="sidebar-brand">
+        <a href="#">SCMXpert Lite</a>
+        
+      </div>
+      
+
+      <div class="sidebar-menu">
+        <ul>
+          <li class="header-menu">
+            <span>General</span>
+          </li>
+          <li class="sidebar-dropdown active ">
+            <a href="./dashboard.html">
+              <i class="fa fa-tachometer-alt"></i>
+              <span>Dashboard</span>
+             
+            </a>
+         
+          </li>
+          <li class="sidebar-dropdown ">
+            <a href="./shipment.html">
+              <i class="fa fa-shopping-cart"></i>
+              <span>Shipments</span>
+             
+            </a>
+          
+          </li>
+          </li>
+
+          <li class="sidebar-dropdown">
+            <a href="./deviceData.html">
+              <i class="fa fa-tachometer-alt"></i>
+              <span>Device Data Stream</span>
+             
+            </a>
+         
+          </li>
+        </ul>
+      </div>
+      <!-- sidebar-menu  -->
     </div>
-<div class="container">
-  <table class="styled-table">
-    <thead>
-      <tr>
-        <th>Battery Level</th>
-        <th>Device Id</th>
-        <th>First_Sensor temperature</th>
-        <th>Route From</th>
-        <th>Route To</th>
-      </tr>
-    </thead>
-    <tbody id="data">
-    </tbody>
-  </table>
+    <!-- sidebar-content  -->
+    <div class="sidebar-footer">
+      
+      <a href="#" onclick="logout()">
+        <i class="fa fa-power-off"></i>
+      </a>
+    </div>
+  </nav>
+  <!-- sidebar-wrapper  -->
+  <main class="page-content">
+        <style>
+          table,
+          th,
+          td {
+            border: 1px solid black;
+          }
+        </style>
+      </head>
+        <h2>Data from Kafka</h2>
+        <div class="button">
+        <button onclick="getDeviceData(this)">Click here to view data</button>
+        </div>
+        
+    <div class="container">
+      <table class="styled-table">
+        <thead>
+          <tr>
+            <th>Battery Level</th>
+            <th>Device Id</th>
+            <th>First_Sensor temperature</th>
+            <th>Route From</th>
+            <th>Route To</th>
+          </tr>
+        </thead>
+        <tbody id="data">
+        </tbody>
+      </table>
+    </div>
+  </main>
+
 </div>
-<script src="../static/js/deviceData.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" ></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="../static/js/deviceData.js"></script>
 </body>
+
 </html>
