--- a/Frontend/templates/dashboard.html
+++ b/Frontend/templates/dashboard.html
@@ -58,7 +58,7 @@
 
           <li class="sidebar-dropdown">
             <a href="./deviceData.html">
-              <i class="fa fa-tachometer-alt"></i>
+              <i class="fa fa-table"></i>
               <span>Device Data Stream</span>
              
             </a>
