--- a/Frontend/templates/deviceData.html
+++ b/Frontend/templates/deviceData.html
@@ -39,7 +39,7 @@
           <li class="header-menu">
             <span>General</span>
           </li>
-          <li class="sidebar-dropdown active ">
+          <li class="sidebar-dropdown">
             <a href="./dashboard.html">
               <i class="fa fa-tachometer-alt"></i>
               <span>Dashboard</span>
@@ -57,9 +57,9 @@
           </li>
           </li>
 
-          <li class="sidebar-dropdown">
+          <li class="sidebar-dropdown active">
             <a href="./deviceData.html">
-              <i class="fa fa-tachometer-alt"></i>
+              <i class="fa fa-table"></i>
               <span>Device Data Stream</span>
              
             </a>
