--- a/Frontend/templates/shipment.html
+++ b/Frontend/templates/shipment.html
@@ -57,8 +57,8 @@
                 </li>
       
                 <li class="sidebar-dropdown">
-                  <a href="#">
-                    <i class="fa fa-tachometer-alt"></i>
+                  <a href="./deviceData.html">
+                    <i class="fa fa-table"></i>
                     <span>Device Data Stream</span>
                    
                   </a>
@@ -83,7 +83,7 @@
             <hr>
             <div class="row">
            
-          <div class="dashboard-form input-form" >
+          <div class="input-form" >
             
       
               <div class="form-input">
