--- a/Frontend/static/css/dashboard.css
+++ b/Frontend/static/css/dashboard.css
@@ -40,7 +40,8 @@
 }
 body {
   font-size: 0.9rem;
-  background: #D8E2F0;
+  background:url('../../asserts/dashboard.jpg');
+  background-size: cover;
 }
 .page-wrapper .sidebar-wrapper,
 .sidebar-wrapper .sidebar-brand > a,
@@ -355,7 +356,7 @@ body {
   display: inline-block;
   width: 100%;
   padding-left: 0px;
-  background: #F2E34C;
+  /* background-image: "../asserts/dashboard.jpg"; */
 }
 
 .page-wrapper .page-content > div {
@@ -515,7 +516,7 @@ body {
 .sectionTitle {
   font-size: 2.2vw;
   font-weight: 300;
-  color: rgb(0, 0, 0);
+  color: rgb(255,255,255);
   margin: 30px 0 200px;
 }
 
