docker file single page

--- a/Frontend/templates/Login.html
+++ b/Frontend/templates/Login.html
@@ -23,7 +23,7 @@
                         <p class="mb-1">Welcome to our</p>
                         <h4 class="mb-5 text-white">shipments Community</h4>
                     </div>
-                    <a href="../../Frontend/templates/Signup.html" button class="btn btn-primary btn-lg" ><small>Don't have an account?</small> <span>&nbsp;Sign up</span>
+                    <a href="../templates/Signup.html" button class="btn btn-primary btn-lg" ><small>Don't have an account?</small> <span>&nbsp;Sign up</span>
                   </a>
             </div>
             <div class="card two bg-white px-5 py-4 mb-3">
