frontend fixed for local

--- a/Frontend/static/css/login.css
+++ b/Frontend/static/css/login.css
@@ -84,7 +84,7 @@ p.mb-1{
 
 #image{
     margin-top: 10px;
-    width: 50px;;
+    width: 50px;
     padding: 10px;
     font-weight: 400;
     padding-bottom: 0px;
