--- a/Frontend/templates/Login.html
+++ b/Frontend/templates/Login.html
@@ -18,7 +18,7 @@
     <div class="container d-flex justify-content-center">
         <div class="d-flex flex-column justify-content-between">
             <div class="card mt-3 p-5">
-                <div class="logo mb-3"><img src="../asserts/Logo.png" style="width: 50px;"></div>
+                <div class="logo mb-3"><img src="../asserts/Logo.png" alt="loginlogo" style="width: 50px;"></div>
                     <div>
                         <p class="mb-1">Welcome to our</p>
                         <h4 class="mb-5 text-white">shipments Community</h4>
