--- a/Frontend/templates/Signup.html
+++ b/Frontend/templates/Signup.html
@@ -20,7 +20,7 @@
     <div class="container d-flex justify-content-center">
         <div class="d-flex flex-column justify-content-between">
             <div class="card mt-3 p-5">
-                <div class="logo mb-3"><img src="../asserts/Logo.png" style="width: 50px;"></div>
+                <div class="logo mb-3"><img src="../asserts/Logo.png" alt="signuplogo" style="width: 50px;"></div>
                     <div>
                         <p class="mb-1">Start managing your</p>
                         <h4 class="mb-5 text-white">shipments with us!</h4>
