--- a/Frontend/templates/deviceData.html
+++ b/Frontend/templates/deviceData.html
@@ -17,7 +17,7 @@
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link href="../static/css/dashboard.css" rel="stylesheet">
     <link href="../static/css/deviceData.css" rel="stylesheet">
- 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
 
 </head>
 
@@ -93,7 +93,7 @@
         </div>
         
     <div class="container">
-      <table class="styled-table">
+      <table summary="Live data from Kafka" class="styled-table">
         <thead>
           <tr>
             <th>Battery Level</th>
