--- a/Frontend/static/css/dashboard.css
+++ b/Frontend/static/css/dashboard.css
@@ -248,7 +248,6 @@ body {
   content: "\f105";
   font-style: normal;
   display: inline-block;
-  font-style: normal;
   font-variant: normal;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
@@ -271,7 +270,6 @@ body {
 
 .sidebar-wrapper .sidebar-menu .sidebar-dropdown .sidebar-submenu li a:before {
   content: "\f111";
-  font-family: "Font Awesome 5 Free";
   font-weight: 400;
   font-style: normal;
   display: inline-block;
@@ -483,7 +481,7 @@ body {
 
 
 .containerDashboard {
-  width: 100wh;
+  width: auto;
   height: 99.5vh;
   background-position: bottom;
   background-repeat: no-repeat;
