--- a/Frontend/templates/deviceData.html
+++ b/Frontend/templates/deviceData.html
@@ -21,7 +21,7 @@
 
 </head>
 
-<body onload="validatetoken()">
+<body>
 <div class="page-wrapper chiller-theme toggled">
   <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
     <i class="fas fa-bars"></i>
