--- a/Frontend/templates/dashboard.html
+++ b/Frontend/templates/dashboard.html
@@ -78,7 +78,7 @@
   <!-- sidebar-wrapper  -->
   <main class="page-content">
     <div class="containerDashboard">
-      <h2>Welcome<span style="margin-left:10px;"  id="email_token"></span></h2>
+      <h2>Welcome<span style="margin-left:10px;"  id="user_token"></span></h2>
       <hr>
       <div class="row">
      
