--- a/Frontend/templates/dashboard.html
+++ b/Frontend/templates/dashboard.html
@@ -48,7 +48,7 @@
           <li class="sidebar-dropdown ">
             <a href="./shipment.html">
               <i class="fa fa-shopping-cart"></i>
-              <span>Shipments</span>
+              <span>Create Shipment</span>
              
             </a>
           
