--- a/Frontend/templates/shipment.html
+++ b/Frontend/templates/shipment.html
@@ -49,7 +49,7 @@
                 <li class="sidebar-dropdown active">
                   <a href="./shipment.html">
                     <i class="fa fa-shopping-cart"></i>
-                    <span>Shipments</span>
+                    <span>Create Shipment</span>
                    
                   </a>
                 
